[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-deploy"
version = "0.1.0"
description = "Lightweight AI deploy agent using LangGraph for automated deploy lifecycle management"
requires-python = ">=3.12"

dependencies = [
    # --- LangGraph (orchestration) ---
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-postgres>=2.0,<3",
    "langchain-anthropic>=0.3,<1",

    # --- HTTP / API ---
    "httpx>=0.28,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",

    # --- Data / Config ---
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30,<1",

    # --- CLI ---
    "typer>=0.15,<1",
    "rich>=13.9,<14",

    # --- Notifications ---
    "slack-bolt>=1.22,<2",

    # --- Reliability ---
    "tenacity>=9.0,<10",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
k8s = [
    "kubernetes>=32,<33",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[project.scripts]
agent-deploy = "agent_deploy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_deploy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
